# mental_health_chatbot

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  start.sh  streamlit_app.py
.streamlit/: config.toml
rasa_chatbot/: alt_config.yml  config.yml  domain.yml  graph.html
rasa_chatbot/data/: nlu.yml  rules.yml  stories.yml
rasa_chatbot/results/: failed_test_stories.yml  intent_errors.json  intent_report.json  story_report.json
rasa_chatbot/tests/: test_stories.yml
rasa_chatbot/train_test_split/: test_data.yml  training_data.yml
