[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["grainne.mcknight <mcknighg@tcd.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
streamlit = "^1.33.0"
openai = "^1.23.6"
rasa = "^3.6.20"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
spacy = "^3.7.4"
en_core_web_md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
